--- a/fake-payment.html
+++ b/fake-payment.html
@@ -177,99 +177,98 @@
     </button>
   </div>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
-    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js";
-    import {
-      getFirestore,
-      doc,
-      getDoc,
-      setDoc,
-      updateDoc,
-      arrayUnion,
-    } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js";
+ <script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
+  import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js";
+  import {
+    getFirestore,
+    doc,
+    getDoc,
+    setDoc,
+    updateDoc,
+    arrayUnion,
+  } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js";
 
-    // Your Firebase config
-    const firebaseConfig = {
-      apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
-      authDomain: "syncskilll.firebaseapp.com",
-      projectId: "syncskilll",
-      storageBucket: "syncskilll.firebasestorage.app",
-      messagingSenderId: "203322315096",
-      appId: "1:203322315096:web:958fc7d94806ef9a98552d",
-      measurementId: "G-JWWWM2ZQSK",
-    };
+  const firebaseConfig = {
+    apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
+    authDomain: "syncskilll.firebaseapp.com",
+    projectId: "syncskilll",
+    storageBucket: "syncskilll.firebasestorage.app",
+    messagingSenderId: "203322315096",
+    appId: "1:203322315096:web:958fc7d94806ef9a98552d",
+    measurementId: "G-JWWWM2ZQSK",
+  };
 
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db = getFirestore(app);
 
-    // DOM Elements
-    const confirmButton = document.getElementById("confirm");
-    const loader = document.getElementById("loader");
-    const buttonText = document.getElementById("button-text");
-    const successAnimation = document.getElementById("success-animation");
-    const title = document.getElementById("title");
-    const message = document.getElementById("message");
+  const confirmButton = document.getElementById("confirm");
+  const loader = document.getElementById("loader");
+  const buttonText = document.getElementById("button-text");
+  const successAnimation = document.getElementById("success-animation");
+  const title = document.getElementById("title");
+  const message = document.getElementById("message");
 
-    // Parse URL params: expect ?course=courseId&uid=userId
-    const params = new URLSearchParams(window.location.search);
-    const course = params.get("course");
-    const uid = params.get("uid");
+  const params = new URLSearchParams(window.location.search);
+  const course = params.get("course");
+  const uid = params.get("uid");
 
-    confirmButton.onclick = async () => {
+  confirmButton.onclick = async () => {
+    confirmButton.disabled = true;
+    buttonText.style.display = "none";
+    loader.style.display = "block";
+
+    try {
+      if (!course || !uid) throw new Error("Missing course or user ID in URL.");
+
+      const userDocRef = doc(db, "userPurchases", uid);
+      const userDocSnap = await getDoc(userDocRef);
+
+      if (userDocSnap.exists()) {
+        await updateDoc(userDocRef, {
+          purchasedCourses: arrayUnion(course),
+        });
+      } else {
+        await setDoc(userDocRef, {
+          purchasedCourses: [course],
+        });
+      }
+
+      loader.style.display = "none";
+      successAnimation.style.display = "block";
+      title.textContent = "Purchase Complete!";
+      message.textContent =
+        "Thank you for your payment. Redirecting to your premium course...";
+
+      confirmButton.style.display = "none";
+
+      // ✅ Redirect to course page after 2 seconds
+      setTimeout(() => {
+        window.location.href = `/premium-course.html?course=${course}`;
+      }, 2000);
+    } catch (err) {
+      loader.style.display = "none";
+      buttonText.style.display = "inline";
+      confirmButton.disabled = false;
+      message.textContent =
+        "Error confirming payment: " + err.message + ". Please try again or contact support.";
+      message.style.color = "red";
+    }
+  };
+
+  onAuthStateChanged(auth, (user) => {
+    if (!user) {
+      message.textContent =
+        "Please log in to confirm your payment and unlock course access.";
       confirmButton.disabled = true;
-      buttonText.style.display = "none";
-      loader.style.display = "block";
+    } else if (uid !== user.uid) {
+      message.textContent =
+        "User ID mismatch. Please use the payment confirmation link sent to your email.";
+      confirmButton.disabled = true;
+    }
+  });
+</script>
 
-      try {
-        if (!course || !uid) throw new Error("Missing course or user ID in URL.");
-
-        const userDocRef = doc(db, "userPurchases", uid);
-        const userDocSnap = await getDoc(userDocRef);
-
-        if (userDocSnap.exists()) {
-          // Add new course to existing purchasedCourses array
-          await updateDoc(userDocRef, {
-            purchasedCourses: arrayUnion(course),
-          });
-        } else {
-          // Create new document with purchasedCourses array
-          await setDoc(userDocRef, {
-            purchasedCourses: [course],
-          });
-        }
-
-        // Animate success UI
-        loader.style.display = "none";
-        successAnimation.style.display = "block";
-        title.textContent = "Purchase Complete!";
-        message.textContent =
-          "Thank you for your payment. Your premium course access is now unlocked.";
-        confirmButton.style.display = "none";
-      } catch (err) {
-        loader.style.display = "none";
-        buttonText.style.display = "inline";
-        confirmButton.disabled = false;
-        message.textContent =
-          "Error confirming payment: " + err.message + ". Please try again or contact support.";
-        message.style.color = "red";
-      }
-    };
-
-    // Optional: Check auth state to verify uid matches logged-in user
-    onAuthStateChanged(auth, (user) => {
-      if (!user) {
-        message.textContent =
-          "Please log in to confirm your payment and unlock course access.";
-        confirmButton.disabled = true;
-      } else if (uid !== user.uid) {
-        message.textContent =
-          "User ID mismatch. Please use the payment confirmation link sent to your email.";
-        confirmButton.disabled = true;
-      }
-    });
-  </script>
 </body>
 </html>
