--- a/course-1/payment.html
+++ b/course-1/payment.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Payment for Course 1</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Payment - Course 1</title>
   <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
-    import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
-    import { getFirestore, doc, setDoc } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js';
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js";
+    import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js";
 
+    // Your Firebase config - replace with your actual config
     const firebaseConfig = {
       apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
       authDomain: "syncskilll.firebaseapp.com",
@@ -15,9 +17,10 @@
       storageBucket: "syncskilll.firebasestorage.app",
       messagingSenderId: "203322315096",
       appId: "1:203322315096:web:958fc7d94806ef9a98552d",
-      measurementId: "G-JWWWM2ZQSK"
+      measurementId: "G-JWWWM2ZQSK",
     };
 
+    // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
@@ -25,36 +28,49 @@
     let currentUser = null;
 
     onAuthStateChanged(auth, (user) => {
-      if (!user) {
-        window.location.href = '/login.html';
-        return;
+      if (user) {
+        currentUser = user;
+        document.getElementById("userEmail").textContent = user.email;
+      } else {
+        // Not logged in, redirect to login
+        window.location.href = "/login.html";
       }
-      currentUser = user;
     });
 
-    async function simulatePayment() {
+    // Simulate payment function
+    window.simulatePayment = async function () {
       if (!currentUser) {
-        alert('User not authenticated!');
+        alert("User not authenticated. Please login first.");
+        window.location.href = "/login.html";
         return;
       }
 
       try {
-        // Simulate payment success - update Firestore
-        const paymentRef = doc(db, 'payments', currentUser.uid);
-        await setDoc(paymentRef, { courses: { course1: true } }, { merge: true });
+        const paymentDocRef = doc(db, "payments", currentUser.uid);
+        const paymentDoc = await getDoc(paymentDocRef);
+        let paymentData = paymentDoc.exists() ? paymentDoc.data() : {};
 
-        alert('Payment successful! Redirecting to premium course...');
-        window.location.href = './premium-course-1.html';
+        // Mark course1 as paid
+        paymentData.course1Paid = true;
+
+        // Save payment status
+        await setDoc(paymentDocRef, paymentData, { merge: true });
+
+        alert("Payment successful! Redirecting to premium course...");
+        window.location.href = "premium-course-1.html";
       } catch (error) {
-        console.error('Payment failed:', error);
-        alert('Payment failed. Please try again.');
+        console.error("Error saving payment:", error);
+        alert("Payment failed. Please try again.");
       }
-    }
+    };
   </script>
 </head>
 <body>
   <h1>Payment Page for Course 1</h1>
-  <p>This is a simulated payment page.</p>
+  <p>Logged in as: <span id="userEmail">Loading...</span></p>
+
+  <p>Price: $10</p>
+
   <button onclick="simulatePayment()">Pay Now</button>
 </body>
 </html>
