--- a/course-1/premium-course-1.html
+++ b/course-1/premium-course-1.html
@@ -1,21 +1,21 @@
+<!-- premium-course-1.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Premium Course 1</title>
   <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
-    import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
-    import { getFirestore, doc, getDoc } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js';
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js";
+    import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
       authDomain: "syncskilll.firebaseapp.com",
       projectId: "syncskilll",
-      storageBucket: "syncskilll.firebasestorage.app",
+      storageBucket: "syncskilll.appspot.com",
       messagingSenderId: "203322315096",
       appId: "1:203322315096:web:958fc7d94806ef9a98552d",
-      measurementId: "G-JWWWM2ZQSK"
     };
 
     const app = initializeApp(firebaseConfig);
@@ -24,35 +24,22 @@
 
     onAuthStateChanged(auth, async (user) => {
       if (!user) {
-        window.location.href = '/login.html';
+        window.location.href = "/login.html";
         return;
       }
 
-      // Check payment before allowing access
-      const paymentDocRef = doc(db, 'payments', user.uid);
-      const paymentDocSnap = await getDoc(paymentDocRef);
+      const paymentDoc = await getDoc(doc(db, "payments", user.uid));
+      const paid = paymentDoc.exists() && paymentDoc.data().course1Paid;
 
-      if (paymentDocSnap.exists()) {
-        const paymentData = paymentDocSnap.data();
-        if (paymentData.courses && paymentData.courses.course1 === true) {
-          // Access granted - show premium content
-          document.getElementById('content').style.display = 'block';
-        } else {
-          // No payment - redirect to base course page
-          window.location.href = './base-course-1.html';
-        }
-      } else {
-        // No payment record - redirect to base course
-        window.location.href = './base-course-1.html';
+      if (!paid) {
+        alert("You have not paid for this course.");
+        window.location.href = "base-course-1.html";
       }
     });
   </script>
 </head>
 <body>
-  <h1>Premium Course 1</h1>
-  <div id="content" style="display:none;">
-    <p>Welcome to the premium content of Course 1!</p>
-    <p>Here is your exclusive material...</p>
-  </div>
+  <h1>🎉 Welcome to Premium Course 1</h1>
+  <p>This is premium content.</p>
 </body>
 </html>
