--- a/course-1/base-course-1.html
+++ b/course-1/base-course-1.html
@@ -6,13 +6,13 @@
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
     import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
-    import { getFirestore, doc, setDoc, updateDoc } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js';
+    import { getFirestore, doc, getDoc } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js';
 
     const firebaseConfig = {
       apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
       authDomain: "syncskilll.firebaseapp.com",
       projectId: "syncskilll",
-      storageBucket: "syncskilll.firebasestorage.app",
+      storageBucket: "syncskilll.appspot.com", // ✅ Fixed typo from .firebasestorage.app
       messagingSenderId: "203322315096",
       appId: "1:203322315096:web:958fc7d94806ef9a98552d",
       measurementId: "G-JWWWM2ZQSK"
@@ -22,42 +22,30 @@
     const auth = getAuth(app);
     const db = getFirestore(app);
 
-    let currentUser = null;
-
-    onAuthStateChanged(auth, (user) => {
+    onAuthStateChanged(auth, async (user) => {
       if (!user) {
         window.location.href = '/login.html';
         return;
       }
-      currentUser = user;
+
+      const paymentRef = doc(db, 'payments', user.uid);
+      const paymentSnap = await getDoc(paymentRef);
+
+      if (paymentSnap.exists()) {
+        const data = paymentSnap.data();
+        const paid = data?.courses?.course1 === true;
+
+        if (paid) {
+          // Redirect to premium course if already paid
+          window.location.href = './premium-course-1.html';
+        }
+      }
     });
-
-    async function payNow() {
-      if (!currentUser) {
-        alert('User not authenticated!');
-        return;
-      }
-
-      try {
-        // Simulate payment success - update Firestore payment document for this user
-        const paymentRef = doc(db, 'payments', currentUser.uid);
-
-        // Update the course1 payment to true
-        await setDoc(paymentRef, { courses: { course1: true } }, { merge: true });
-
-        alert('Payment successful! Redirecting to premium course...');
-        window.location.href = './premium-course-1.html';
-      } catch (error) {
-        console.error('Payment failed:', error);
-        alert('Payment failed. Please try again.');
-      }
-    }
   </script>
 </head>
 <body>
   <h1>Base Course 1 (Free Content)</h1>
   <p>This is the free version of Course 1.</p>
   <button onclick="window.location.href = './payment.html'">Pay to unlock premium course</button>
-
 </body>
 </html>
